--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 
+/* For Card */
 .card{
     border: 1px solid hsl(0, 0%, 80%);
     border-radius: 10px;
@@ -28,3 +29,16 @@
     font-family: Poppins;
     color: hsl(0, 0%, 30%);
 }
+
+
+/* For Button */
+/* .sampleBtn{
+    font-family: Poppins;
+    font-size: 10px;
+    background-color: hsl(0, 0%, 15%);
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+} */
