--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,16 @@
     border: none;
     cursor: pointer;
 } */
+
+/*For Student*/
+
+.student {
+    font-family: Poppins;
+    font-size: 2em;
+    padding: 10px;
+    border: 1px solid hsl(0, 0%, 80%);
+}
+
+.student p{
+    margin: 0;
+}
