SR Trials 5-6: Conditional Rendering and Render List

--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,25 @@
 .student p{
     margin: 0;
 }
+
+/*For User Greeting*/
+
+.welcome-message {
+    font-family: Poppins;
+    font-size: 2.5em;
+    background-color: hsl(0, 0%, 15%);
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 0px;
+}
+
+.login-prompt{
+    font-family: Poppins;
+    font-size: 2.5em;
+    background-color: hsl(0, 28%, 15%);
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 0px;
+}
